--- a/widgets/datawidget.ui
+++ b/widgets/datawidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1384</width>
+    <width>1422</width>
     <height>837</height>
    </rect>
   </property>
@@ -67,6 +67,26 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="pbLoadSession">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Load session</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pbSaveSession">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Save session</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pbPublish">
         <property name="enabled">
          <bool>false</bool>
@@ -121,7 +141,7 @@
                </size>
               </property>
               <property name="selectionMode">
-               <enum>QAbstractItemView::ExtendedSelection</enum>
+               <enum>QAbstractItemView::SingleSelection</enum>
               </property>
               <property name="selectionBehavior">
                <enum>QAbstractItemView::SelectRows</enum>
@@ -156,7 +176,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QPushButton" name="pushButton">
+                <widget class="QPushButton" name="pbMoveTo">
                  <property name="enabled">
                   <bool>false</bool>
                  </property>
@@ -257,9 +277,15 @@
                  <layout class="QHBoxLayout" name="horizontalLayout_6">
                   <item>
                    <widget class="QWidget" name="widget_4" native="true">
+                    <property name="enabled">
+                     <bool>true</bool>
+                    </property>
                     <layout class="QHBoxLayout" name="horizontalLayout_2">
                      <item>
-                      <widget class="QLabel" name="label_2">
+                      <widget class="QLabel" name="nameLable">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
                        <property name="minimumSize">
                         <size>
                          <width>50</width>
@@ -291,7 +317,10 @@
                    <widget class="QWidget" name="widget_5" native="true">
                     <layout class="QHBoxLayout" name="horizontalLayout_3">
                      <item>
-                      <widget class="QLabel" name="label_3">
+                      <widget class="QLabel" name="labelLabel">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
                        <property name="minimumSize">
                         <size>
                          <width>50</width>
@@ -329,7 +358,10 @@
                    <widget class="QWidget" name="widget_6" native="true">
                     <layout class="QHBoxLayout" name="horizontalLayout_5">
                      <item>
-                      <widget class="QLabel" name="label_5">
+                      <widget class="QLabel" name="sourceLabel">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
                        <property name="minimumSize">
                         <size>
                          <width>50</width>
@@ -391,16 +423,6 @@
                      </size>
                     </property>
                    </spacer>
-                  </item>
-                  <item>
-                   <widget class="QPushButton" name="pbCancelEdit">
-                    <property name="enabled">
-                     <bool>false</bool>
-                    </property>
-                    <property name="text">
-                     <string>Cancel</string>
-                    </property>
-                   </widget>
                   </item>
                   <item>
                    <widget class="QPushButton" name="pbUpdateSingle">
