--- a/widgets/trainingwidget.ui
+++ b/widgets/trainingwidget.ui
@@ -25,21 +25,25 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QWidget" name="playWidget" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>128</width>
+          <height>128</height>
+         </size>
+        </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QPushButton" name="pbPause">
-           <property name="text">
-            <string>Pause</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pbPlay">
-           <property name="text">
-            <string>Play</string>
-           </property>
-          </widget>
-         </item>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
         </layout>
        </widget>
       </item>
@@ -65,6 +69,32 @@
          </size>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QWidget" name="widget_15" native="true">
+           <layout class="QVBoxLayout" name="verticalLayout_16">
+            <item>
+             <widget class="QLabel" name="label_16">
+              <property name="text">
+               <string>Epochs</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="lnEpochs">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
          <item>
           <widget class="QWidget" name="widget_2" native="true">
            <layout class="QVBoxLayout" name="verticalLayout">
@@ -519,7 +549,7 @@ font-weight: bold;
        <widget class="QWidget" name="widget_6" native="true">
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="1" column="1" colspan="2">
-          <widget class="QWidget" name="widget_18" native="true">
+          <widget class="QWidget" name="lossWidget" native="true">
            <property name="minimumSize">
             <size>
              <width>0</width>
@@ -527,12 +557,12 @@ font-weight: bold;
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(254, 166, 8);</string>
+            <string notr="true"/>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QWidget" name="widget_15" native="true">
+          <widget class="QWidget" name="confusionMatrixWidget" native="true">
            <property name="minimumSize">
             <size>
              <width>200</width>
@@ -540,14 +570,14 @@ font-weight: bold;
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(252, 0, 8);</string>
+            <string notr="true"/>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QWidget" name="widget_17" native="true">
+          <widget class="QWidget" name="convFilterWidget" native="true">
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(108, 255, 30);</string>
+            <string notr="true"/>
            </property>
           </widget>
          </item>
@@ -556,13 +586,13 @@ font-weight: bold;
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>600</height>
+             <height>300</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>600</height>
+             <height>16777215</height>
             </size>
            </property>
            <layout class="QVBoxLayout" name="neuralNetworkLayout">
