--- a/widgets/trainingwidget.ui
+++ b/widgets/trainingwidget.ui
@@ -373,8 +373,10 @@
           <widget class="QLabel" name="label_9">
            <property name="font">
             <font>
+             <family>.SF NS Text</family>
              <pointsize>20</pointsize>
              <weight>75</weight>
+             <italic>false</italic>
              <bold>true</bold>
             </font>
            </property>
@@ -569,9 +571,32 @@ font-weight: bold;
              <height>0</height>
             </size>
            </property>
+           <property name="maximumSize">
+            <size>
+             <width>350</width>
+             <height>16777215</height>
+            </size>
+           </property>
            <property name="styleSheet">
             <string notr="true"/>
            </property>
+           <layout class="QVBoxLayout" name="confLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+           </layout>
           </widget>
          </item>
          <item row="1" column="0">
